# Calcite

./: .gitignore  README.md  pyproject.toml
calcite/: __init__.py  calcite.h  constants.py  formulas.py  world.py
calcite/core/: Physical.cpp  Physical.h  World.cpp  World.h  __init__.py  atom.py  core.h  exceptions.py  formulas.py  molecule.py  orbital.py  particle.py  particle.pyi  quark.py
calcite/core/atoms/: atom.py  atom.pyi  atom_functions.py  orbital.py  orbital.pyi
calcite/core/composites/: composite.py  composite.pyi
calcite/core/m-groups/: aggregate.py
calcite/core/m_groups/: aggregate.py  aggregate.pyi  complex.py  complex.pyi
calcite/core/moleclues/: molecule.py  molecule.pyi
calcite/core/molecules/: molecule.py  molecule.pyi
calcite/core/particle/: Particle.cpp  Particle.h
calcite/core/particle/types/: Electron.cpp  Electron.h
calcite/core/particles/: particle.py  particle.pyi
calcite/core/quarks/: quark.py  quark.pyi
calcite/core/vectors/: vector.py  vector.pyi
calcite/math/: Constants.h  Quantity.cpp  Quantity.h  ScaledDouble.cpp  ScaledDouble.h  Unit.h  Vector3.cpp  Vector3.h  scfuncs.cpp  scfuncs.h
stubs/core/: particle.pyi
